src/third_party/nasm/travis/test/org.stderr
./travis/test/org.asm:5: error: parser: instruction expected